--- a/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\202304171829112_Initial.Designer.cs">
       <DependentUpon>202304171829112_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202304182033369_Initial1.cs" />
+    <Compile Include="Migrations\202304182033369_Initial1.Designer.cs">
+      <DependentUpon>202304182033369_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -70,6 +74,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202304171829112_Initial.resx">
       <DependentUpon>202304171829112_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304182033369_Initial1.resx">
+      <DependentUpon>202304182033369_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
